==> ycsin/zephyr/drivers/spi/spi_ameba.c <==
#define DT_DRV_COMPAT realtek_ameba_spi
#include <soc.h>
#include <ameba_soc.h>
#include <zephyr/drivers/spi.h>
#include <zephyr/intc2.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/logging/log.h>
#include "spi_context.h"
#include "dma_ameba_gdma.h"
#include <zephyr/drivers/dma.h>
#include <zephyr/cache.h>

static int spi_dma_move_rx_buffers(const struct device *dev, size_t len)
{
	struct spi_ameba_data *data = dev->data;
	uint32_t dma_segment_len;
	uint8_t dfs;

	if (data->datasize <= 8) {
		dfs = 1;
	} else if (data->datasize <= 16) {
		dfs = 2;
	} else {
		LOG_ERR("err datalen:%u", data->datasize);
		return -ENOTSUP;
	}

	dma_segment_len = len * dfs;
	LOG_DBG("%s %u rx%p len%u dfs%u", __func__, __LINE__, data->ctx.rx_buf, len, dfs);

	return spi_ameba_dma_receive(dev, data->ctx.rx_buf, dma_segment_len);
}

static int spi_dma_move_tx_buffers(const struct device *dev, size_t len)
{
	struct spi_ameba_data *data = dev->data;
	uint32_t dma_segment_len;
	uint8_t dfs;

	if (data->datasize <= 8) {
		dfs = 1;
	} else if (data->datasize <= 16) {
		dfs = 2;
	} else {
		LOG_ERR("err datalen:%u", data->datasize);
		return -ENOTSUP;
	}

	dma_segment_len = len * dfs;
	LOG_DBG("%s %u tx%p len%u dfs%u", __func__, __LINE__, data->ctx.tx_buf, len, dfs);
	return spi_ameba_dma_send(dev, data->ctx.tx_buf, dma_segment_len);
}

static int transceive_dma(const struct device *dev, const struct spi_config *spi_cfg,
			  const struct spi_buf_set *tx_bufs, const struct spi_buf_set *rx_bufs,
			  bool asynchronous, spi_callback_t cb, void *userdata)
{
	struct spi_ameba_data *data = dev->data;
	const struct spi_ameba_config *cfg = dev->config;
	SPI_TypeDef *spi = (SPI_TypeDef *)cfg->SPIx;
	int ret;

	if (!tx_bufs && !rx_bufs) {
		return 0;
	}

	if (asynchronous) {
		LOG_ERR("Not support dma mode for ASYNC");
		return -ENOTSUP;
	}

	spi_context_lock(&data->ctx, asynchronous, cb, userdata, spi_cfg);
	ret = spi_ameba_configure(dev, spi_cfg);
	if (ret < 0) {
		goto end;
	}

	SSI_Cmd(spi, ENABLE);
	spi_context_buffers_setup(&data->ctx, tx_bufs, rx_bufs, ((data->datasize - 1) >> 3) + 1);
	spi_context_cs_control(&data->ctx, true);

	k_sem_reset(&data->status_sem);

	if (tx_bufs && rx_bufs) {
		data->transfer_dir = SPI_AMEBA_FULL_DUPLEX_FLAG;
	} else if (tx_bufs) {
		data->transfer_dir = SPI_AMEBA_HALF_DUPLEX_TX_FLAG;
	} else {
		LOG_ERR("Not support rx only mode for dma");
		ret = -ENOTSUP;
		goto end;
	}

	LOG_DBG("dma mode");

	if (!spi_ameba_dma_enabled(dev)) {
		LOG_ERR("dma dev is not enabled");
		ret = -ENOTSUP;
		goto end;
	}

	while (data->ctx.rx_len > 0 || data->ctx.tx_len > 0) {
		ret = spi_ameba_dma_chunk_transfer(dev, data->transfer_dir);
		if (ret != 0) {
			goto dma_error;
		}
	}

dma_error:
	SSI_SetDmaEnable(spi, DISABLE, SPI_BIT_TDMAE);
	SSI_SetDmaEnable(spi, DISABLE, SPI_BIT_RDMAE);

	(void)dma_stop(data->dma_rx.dma_dev, data->dma_rx.dma_channel);

	(void)dma_stop(data->dma_tx.dma_dev, data->dma_tx.dma_channel);

end:
	spi_context_cs_control(&data->ctx, false);
	SSI_Cmd(spi, DISABLE);

	spi_context_release(&data->ctx, ret);
	return ret;
}

static int transceive(const struct device *dev, const struct spi_config *spi_cfg,
		      const struct spi_buf_set *tx_bufs, const struct spi_buf_set *rx_bufs,
		      bool asynchronous, spi_callback_t cb, void *userdata)
{
	struct spi_ameba_data *data = dev->data;
	const struct spi_ameba_config *config = dev->config;
	SPI_TypeDef *spi = (SPI_TypeDef *)config->SPIx;
	int ret;

	if (!tx_bufs && !rx_bufs) {
		return 0;
	}

#ifndef CONFIG_SPI_AMEBA_INTERRUPT
	if (asynchronous) {
		return -ENOTSUP;
	}
#endif /* CONFIG_SPI_AMEBA_INTERRUPT */

	/* fix for take sync sema timeout
	 * spi_context_lock(&data->ctx, asynchronous, cb, userdata, spi_cfg);
	 */
	spi_context_lock(&data->ctx, (cb != NULL), cb, userdata, spi_cfg);

	ret = spi_ameba_configure(dev, spi_cfg);
	if (ret < 0) {
		goto end;
	}

	SSI_Cmd(spi, ENABLE);
	spi_context_buffers_setup(&data->ctx, tx_bufs, rx_bufs, ((data->datasize <= 8) ? 1 : 2));
	spi_context_cs_control(&data->ctx, true);

#ifdef CONFIG_SPI_AMEBA_INTERRUPT
	{
		uint32_t int_mask = 0; /* fix warning */

		data->fifo_diff = 0U;

		if (data->datasize > 16 || data->datasize < 4) {
			LOG_ERR("Data Frame Size is supported from 4 ~ 16");
			ret = -EINVAL;
			goto end;
		}

		if (spi_ameba_is_slave(data)) {
			if (tx_bufs) { /* && tx_bufs->buffers*/
				int_mask = SPI_BIT_TXEIM;
			}
			if (rx_bufs) { /* && rx_bufs->buffers*/
				int_mask |= SPI_BIT_RXFIM;
			}
		} else {
			int_mask = (SPI_BIT_TXEIM | SPI_BIT_RXFIM);
		}

		LOG_DBG("Set int_mask 0x%x", int_mask);
		SSI_INTConfig(spi, int_mask, ENABLE);
	}

	ret = spi_context_wait_for_completion(&data->ctx);
#else

	do {
		ret = spi_ameba_frame_exchange(dev);
		if (ret < 0) {
			break;
		}
	} while (spi_ameba_transfer_ongoing(data));

#ifdef CONFIG_SPI_ASYNC
	spi_context_complete(&data->ctx, dev, ret);
#endif
#endif

	while ((!(SSI_GetStatus(spi) & SPI_BIT_TFE)) || (SSI_GetStatus(spi) & SPI_BIT_BUSY)) {
		/* NOP */
	}

end:
	spi_context_cs_control(&data->ctx, false);
	SSI_Cmd(spi, DISABLE);

	spi_context_release(&data->ctx, ret);
	return ret;
}
