==> ycsin/zephyr/drivers/spi/spi_stm32.c <==
#define DT_DRV_COMPAT st_stm32_spi
#include <zephyr/logging/log.h>
#include <zephyr/intc2.h>
#include <zephyr/cache.h>
#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/drivers/dma.h>
#include <zephyr/drivers/dma/dma_stm32.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/spi.h>
#include "spi_rtio.h"
#include <zephyr/dt-bindings/memory-attr/memory-attr-arm.h>
#include <zephyr/irq.h>
#include <zephyr/kernel.h>
#include <zephyr/linker/linker-defs.h>
#include <zephyr/mem_mgmt/mem_attr.h>
#include <zephyr/pm/policy.h>
#include <zephyr/pm/device.h>
#include <zephyr/pm/device_runtime.h>
#include <zephyr/rtio/rtio.h>
#include <zephyr/sys/util.h>
#include <zephyr/toolchain.h>
#include <soc.h>
#include <stm32_bitops.h>
#include <stm32_cache.h>
#include <stm32_ll_spi.h>
#include <errno.h>
#include "spi_stm32.h"
#define STM32_SPI_BAUD_RATE_PRESCALER_256	LL_SPI_BAUD_RATE_PRESCALER_256
#define STM32_SPI_BAUD_RATE_PRESCALER_128	LL_SPI_BAUD_RATE_PRESCALER_128
#define STM32_SPI_BAUD_RATE_PRESCALER_64	LL_SPI_BAUD_RATE_PRESCALER_64
#define STM32_SPI_BAUD_RATE_PRESCALER_32	LL_SPI_BAUD_RATE_PRESCALER_32
#define STM32_SPI_BAUD_RATE_PRESCALER_16	LL_SPI_BAUD_RATE_PRESCALER_16
#define STM32_SPI_BAUD_RATE_PRESCALER_8		LL_SPI_BAUD_RATE_PRESCALER_8
#define STM32_SPI_BAUD_RATE_PRESCALER_4		LL_SPI_BAUD_RATE_PRESCALER_4
#define STM32_SPI_BAUD_RATE_PRESCALER_2		LL_SPI_BAUD_RATE_PRESCALER_2

static int spi_dma_move_rx_buffers(const struct device *dev, size_t len)
{
	struct spi_stm32_data *data = dev->data;
	size_t dma_segment_len;

	dma_segment_len = len * data->dma_rx.dma_cfg.dest_data_size;
	return spi_stm32_dma_rx_load(dev, data->ctx.rx_buf, dma_segment_len);
}

static int spi_dma_move_tx_buffers(const struct device *dev, size_t len)
{
	struct spi_stm32_data *data = dev->data;
	size_t dma_segment_len;

	dma_segment_len = len * data->dma_tx.dma_cfg.source_data_size;
	return spi_stm32_dma_tx_load(dev, data->ctx.tx_buf, dma_segment_len);
}

static int transceive_dma(const struct device *dev,
			  const struct spi_config *config)
{
	const struct spi_stm32_config *cfg = dev->config;
	struct spi_stm32_data *data = dev->data;
	SPI_TypeDef *spi = cfg->spi;
	struct dma_config *rx_cfg = &data->dma_rx.dma_cfg, *tx_cfg = &data->dma_tx.dma_cfg;
	uint32_t transfer_dir = ll_get_transfer_direction(spi);
	int ret;
	int err;
	uint8_t dfs = bits2bytes(config->operation);

	k_sem_reset(&data->status_sem);

	rx_cfg->source_data_size = rx_cfg->source_burst_length = dfs;
	rx_cfg->dest_data_size = rx_cfg->dest_burst_length = dfs;
	tx_cfg->source_data_size = tx_cfg->source_burst_length = dfs;
	tx_cfg->dest_data_size = tx_cfg->dest_burst_length = dfs;

	/* Set request before enabling (otherwise SPI CFG1 reg may be write protected) */
	spi_dma_enable_requests(spi);
	LL_SPI_Enable(spi);
	spi_stm32_cs_control(dev, true);
#if DT_HAS_COMPAT_STATUS_OKAY(st_stm32h7_spi)
	if (SPI_OP_MODE_GET(config->operation) == SPI_OP_MODE_MASTER) {
		LL_SPI_StartMasterTransfer(spi);
	}
#endif /* st_stm32h7_spi */

	do {
		data->status_flags = 0;

		if (transfer_dir == STM32_SPI_FULL_DUPLEX) {
			data->tx_len = data->rx_len = spi_context_max_continuous_chunk(&data->ctx);
			ret = spi_dma_move_buffers(dev, data->tx_len);
		} else if (transfer_dir == STM32_SPI_HALF_DUPLEX_TX) {
			data->tx_len = data->ctx.tx_len;
			ret = spi_dma_move_tx_buffers(dev, data->tx_len);
		} else {
			data->rx_len = data->ctx.rx_len;
			ret = spi_dma_move_rx_buffers(dev, data->rx_len);
		}

#ifdef CONFIG_SPI_ASYNC
		if (data->ctx.asynchronous) {
			return spi_context_wait_for_completion(&data->ctx);
		}
#endif /* CONFIG_SPI_ASYNC */

		ret = wait_dma_rx_tx_done(dev);
		if (ret != 0) {
			break;
		}

		spi_stm32_dma_tx_done(dev);
		spi_stm32_dma_rx_done(dev, config);

		if (transfer_dir == STM32_SPI_HALF_DUPLEX_TX &&
		    !spi_context_tx_on(&data->ctx) &&
		    spi_context_rx_on(&data->ctx)) {
			ll_disable_spi(spi);
			ll_set_transfer_direction(spi, STM32_SPI_HALF_DUPLEX_RX);
			transfer_dir = STM32_SPI_HALF_DUPLEX_RX;
			LL_SPI_Enable(spi);
#if DT_HAS_COMPAT_STATUS_OKAY(st_stm32h7_spi)
			if (SPI_OP_MODE_GET(config->operation) == SPI_OP_MODE_MASTER) {
				LL_SPI_StartMasterTransfer(spi);
			}
#endif /* st_stm32h7_spi */
		}
	} while (spi_stm32_transfer_ongoing(data));

	/* spi complete relies on SPI Status Reg which cannot be disabled */
	spi_stm32_complete(dev, ret);

#ifdef CONFIG_SPI_SLAVE
	bool slave_hd_tx = spi_context_is_slave(&data->ctx) &&
			   (config->operation & SPI_HALF_DUPLEX) &&
			   (ll_get_transfer_direction(spi) == STM32_SPI_HALF_DUPLEX_TX);
#else
	bool slave_hd_tx = false;
#endif

	/* Keep SPE enabled for SPI_HOLD_ON_CS or Slave Half-Duplex TX */
	if (!slave_hd_tx && !(config->operation & SPI_HOLD_ON_CS)) {
		ll_disable_spi(spi);
	}
	/* The Config. Reg. on some mcus is write un-protected when SPI is disabled */
	LL_SPI_DisableDMAReq_TX(spi);
	LL_SPI_DisableDMAReq_RX(spi);

	err = dma_stop(data->dma_rx.dma_dev, data->dma_rx.channel);
	if (err != 0) {
		LOG_DBG("Rx dma_stop failed with error %d", err);
	}
	err = dma_stop(data->dma_tx.dma_dev, data->dma_tx.channel);
	if (err != 0) {
		LOG_DBG("Tx dma_stop failed with error %d", err);
	}

#ifdef CONFIG_SPI_SLAVE
	if (spi_context_is_slave(&data->ctx) && ret == 0) {
		ret = data->ctx.recv_frames;
	}
#endif /* CONFIG_SPI_SLAVE */

	return ret;
}

static int transceive(const struct device *dev,
		      const struct spi_config *config,
		      const struct spi_buf_set *tx_bufs,
		      const struct spi_buf_set *rx_bufs,
		      bool asynchronous,
		      spi_callback_t cb,
		      void *userdata)
{
	struct spi_stm32_data *data = dev->data;
	int ret;
	bool use_dma = false;

#if defined(CONFIG_SPI_STM32_DMA)
	use_dma = (data->dma_tx.dma_dev != NULL) && (data->dma_rx.dma_dev != NULL);
#endif /* CONFIG_SPI_STM32_DMA */

	if (tx_bufs == NULL && rx_bufs == NULL) {
		return 0;
	}

	if (asynchronous && !IS_ENABLED(CONFIG_SPI_STM32_INTERRUPT) && !use_dma) {
		LOG_ERR("Asynchronous transfer needs interrupts or DMA");
		return -ENOTSUP;
	}

#if defined(CONFIG_DCACHE) && defined(CONFIG_SPI_STM32_DMA) && !defined(CONFIG_SPI_RTIO)
	if (use_dma &&
	    ((tx_bufs != NULL && !spi_buf_set_in_nocache(tx_bufs)) ||
	     (rx_bufs != NULL && !spi_buf_set_in_nocache(rx_bufs)))) {
		LOG_ERR("SPI DMA transfers not supported on cached memory");
		return -ENOTSUP;
	}
#endif /* CONFIG_DCACHE && CONFIG_SPI_STM32_DMA && !CONFIG_SPI_RTIO */

	spi_context_lock(&data->ctx, asynchronous, cb, userdata, config);

	spi_stm32_pm_policy_state_lock_get(dev);

#ifdef CONFIG_SPI_RTIO
	ret = spi_rtio_transceive(data->rtio_ctx, config, tx_bufs, rx_bufs);
#else /* CONFIG_SPI_RTIO */
	const struct spi_stm32_config *cfg = dev->config;
	SPI_TypeDef *spi = cfg->spi;

	ret = spi_stm32_configure(dev, config, tx_bufs != NULL);
	if (ret != 0) {
		goto end;
	}

	/* Set buffers info */
	spi_context_buffers_setup(&data->ctx, tx_bufs, rx_bufs, bits2bytes(config->operation));

	if (!spi_stm32_transfer_ongoing(data)) {
		goto end;
	}

#ifdef CONFIG_SPI_STM32_DMA
	if (use_dma) {
		ret = transceive_dma(dev, config);
		goto end;
	}
#endif /* CONFIG_SPI_STM32_DMA */

	uint32_t transfer_dir = ll_get_transfer_direction(spi);

	ret = spi_stm32_set_transfer_size(dev, config, tx_bufs, rx_bufs);
	if (ret != 0) {
		goto end;
	}

	spi_stm32_msg_start(dev, rx_bufs == NULL);

#ifdef CONFIG_SPI_STM32_INTERRUPT
	do {
		ret = spi_context_wait_for_completion(&data->ctx);

		if (ret == 0 && transfer_dir == STM32_SPI_HALF_DUPLEX_TX) {
			ret = spi_stm32_half_duplex_switch_to_receive(cfg, data);
			transfer_dir = ll_get_transfer_direction(spi);
		}
	} while (ret == 0 && spi_stm32_transfer_ongoing(data) &&
		 transfer_dir != STM32_SPI_FULL_DUPLEX);
#else /* CONFIG_SPI_STM32_INTERRUPT */
	while (ret == 0 && spi_stm32_transfer_ongoing(data)) {
		ret = spi_stm32_shift_frames(spi, data);

		if (ret == 0 && transfer_dir == STM32_SPI_HALF_DUPLEX_TX) {
			ret = spi_stm32_half_duplex_switch_to_receive(cfg, data);
			transfer_dir = ll_get_transfer_direction(spi);
		}
	}

	spi_stm32_complete(dev, ret);

#ifdef CONFIG_SPI_SLAVE
	if (spi_context_is_slave(&data->ctx) && ret == 0) {
		ret = data->ctx.recv_frames;
	}
#endif /* CONFIG_SPI_SLAVE */

#endif /* CONFIG_SPI_STM32_INTERRUPT */

end:
#endif /* CONFIG_SPI_RTIO */
	if (ret != 0 || !asynchronous || IS_ENABLED(CONFIG_SPI_RTIO)) {
		spi_stm32_pm_policy_state_lock_put(dev);
	}

	spi_context_release(&data->ctx, ret);

	return ret;
}
